--- a/src/WPFExample/MainWindow.xaml
+++ b/src/WPFExample/MainWindow.xaml
@@ -1,27 +1,39 @@
-﻿<Window x:Class="WPFExample.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFExample"
-        xmlns:edrawing="clr-namespace:DuEDrawingControl;assembly=DuEDrawingControl"
-        xmlns:ptools="http://propertytools.org/wpf"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800">
+﻿<Window
+    x:Class="WPFExample.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:edrawing="clr-namespace:DuEDrawingControl;assembly=DuEDrawingControl"
+    xmlns:local="clr-namespace:WPFExample"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ptools="http://propertytools.org/wpf"
+    Title="MainWindow"
+    Width="800"
+    Height="600"
+    mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="10*"/>
-            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="10*" />
+            <ColumnDefinition Width="5*" />
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Margin="10" x:Name="edrawingPanel">
-            <edrawing:EDrawingWPFControl Background="Gray" Name="edrawingControl">
-            </edrawing:EDrawingWPFControl>
+        <Grid
+            x:Name="edrawingPanel"
+            Grid.Column="0"
+            Margin="10">
+            <edrawing:EDrawingWPFControl Name="edrawingControl" Background="Gray" />
         </Grid>
-        <GridSplitter Grid.Column="0" Width="10" HorizontalAlignment="Right" ResizeDirection="Columns"></GridSplitter>
-        <ScrollViewer Margin="2,10" Grid.Column="1">
-            <StackPanel Margin="2,5"  Orientation="Vertical" >
+        <GridSplitter
+            Grid.Column="0"
+            Width="10"
+            HorizontalAlignment="Right"
+            ResizeDirection="Columns" />
+        <ScrollViewer Grid.Column="1" Margin="2,10">
+            <StackPanel Margin="2,5" Orientation="Vertical">
                 <Button Margin="2,2" Click="Button_Click">打开文档(OpenDoc)</Button>
-                <Border Margin="2,2" Background="Gray" CornerRadius="5">
+                <Border
+                    Margin="2,2"
+                    Background="Gray"
+                    CornerRadius="5">
                     <StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <RadioButton x:Name="part" IsChecked="True">Part</RadioButton>
@@ -34,55 +46,75 @@
                 <Button Margin="2,2" Click="Button_Click_11">Open MarkUp File</Button>
                 <Button Margin="2,2" Click="Button_Click_2">关闭文档(CloseDoc)</Button>
                 <Button Margin="2,2" Click="Button_Click_3">清除选择(ClearSelection)</Button>
-                <Border Margin="0,2" Background="Gray" CornerRadius="5">
-                    <Expander IsExpanded="False" Header="动画选项(AnimateAction)">
+                <Border
+                    Margin="0,2"
+                    Background="Gray"
+                    CornerRadius="5">
+                    <Expander Header="动画选项(AnimateAction)" IsExpanded="False">
                         <StackPanel>
                             <RadioButton x:Name="back">Back(Previous view)</RadioButton>
                             <RadioButton x:Name="continuous" IsChecked="True">Continuous(Play continuously)</RadioButton>
                             <RadioButton x:Name="forward">ForWard(Next view)</RadioButton>
                             <RadioButton x:Name="notanimating">NotAnimating</RadioButton>
                             <RadioButton x:Name="stopanimation">Stop animation</RadioButton>
-                            <Button Margin="2,4" Height="25" Click="Button_Click_4">动画(Animate)</Button>
+                            <Button
+                                Height="25"
+                                Margin="2,4"
+                                Click="Button_Click_4">
+                                动画(Animate)
+                            </Button>
                         </StackPanel>
                     </Expander>
                 </Border>
-                <Border Margin="0,2" Background="Gray" CornerRadius="5">
+                <Border
+                    Margin="0,2"
+                    Background="Gray"
+                    CornerRadius="5">
                     <Expander Header="CreateToolTip">
                         <StackPanel>
-                            <ptools:PropertyGrid x:Name="toolTipProGrid"></ptools:PropertyGrid>
-                            <Button Click="Button_Click_5" Height="25">CreateToolTip</Button>
+                            <ptools:PropertyGrid x:Name="toolTipProGrid" />
+                            <Button Height="25" Click="Button_Click_5">CreateToolTip</Button>
                             <Button Click="Button_Click_7">Hide Tooltip with TipID</Button>
                         </StackPanel>
                     </Expander>
                 </Border>
                 <Button Margin="2,2" Click="Button_Click_6">Hide All Tooltips</Button>
                 <Button Margin="2,2" Click="Button_Click_8">Refresh</Button>
-                <Border Margin="0,2" Background="Gray" CornerRadius="5">
+                <Border
+                    Margin="0,2"
+                    Background="Gray"
+                    CornerRadius="5">
                     <Expander Header="Print">
                         <StackPanel>
-                            <ptools:PropertyGrid x:Name="printProGrid"/>
+                            <ptools:PropertyGrid x:Name="printProGrid" />
                             <Button Height="25" Click="Button_Click_9">Print</Button>
                         </StackPanel>
                     </Expander>
                 </Border>
-                <Border Margin="2,2" Background="Gray" CornerRadius="5">
+                <Border
+                    Margin="2,2"
+                    Background="Gray"
+                    CornerRadius="5">
                     <Expander Header="Save And SaveAs">
                         <StackPanel>
-                            <ptools:PropertyGrid ShowDescriptionIcons="True" x:Name="saveProGrid"/>
+                            <ptools:PropertyGrid x:Name="saveProGrid" ShowDescriptionIcons="True" />
                             <Button Height="25" Click="Button_Click_10">Save</Button>
                         </StackPanel>
                     </Expander>
                 </Border>
-                <Border Margin="2,2" Background="Gray" CornerRadius="5">
+                <Border
+                    Margin="2,2"
+                    Background="Gray"
+                    CornerRadius="5">
                     <Expander Header="通过射线选择(SelectedByRay)">
                         <StackPanel>
-                            <ptools:PropertyGrid x:Name="selectedRayProGrid"/>
+                            <ptools:PropertyGrid x:Name="selectedRayProGrid" />
                             <Button Height="25" Click="Button_Click_12">选择</Button>
                         </StackPanel>
                     </Expander>
                 </Border>
             </StackPanel>
         </ScrollViewer>
-       
+
     </Grid>
 </Window>
